z-index to avoid getting overlapped by icons... #113

--- a/resources/style.css
+++ b/resources/style.css
@@ -355,6 +355,7 @@ hr {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 500;
 }
 
 #navigation {
